<resources>
    <string name="app_name">Cinema Booking</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Create Account</string>
    <string name="click_to_login">Already have an account? Log in</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="cinema_booking_app">Cinema Booking App</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_up2">Don\'t have an account? Sign up</string>
    <string name="sign_up3">Sign up</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pricing_and_tickets_info">At our cinema, we strive to offer affordable and competitive pricing for all of our moviegoers. We offer special discounts for students and children. The standard ticket is priced at 7€, while the student ticket is available for 5€ and the children\s ticket is priced at 4€.\n\nTo make purchasing tickets as easy and convenient as possible, we offer online ticket sales through our app, as well as the option to purchase tickets in person at our box office. We accept various payment methods, including cash (box office-only), credit cards, and mobile payments.</string>
    <string name="about_our_cinema_info">Our cinema is a true gem of our town, having been established decades ago as the very first movie theater in the area.\nWith only one hall, featuring 50 cozy seats, it provides an intimate and nostalgic atmosphere, making every visit a truly unique experience.\nOur cinema specializes in showing old, cultural classic movies, carefully selected to bring the history and traditions of cinema to the modern audience.\nYou can enjoy our screenings exclusively on Fridays and Saturdays, and we promise you\'ll leave with a smile on your face and a warm feeling in your heart.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="enter_password">Please enter your password</string>
    <string name="authentication_failed">Wrong password</string>
    <string name="enter_email">Please enter your email</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="submit">Submit</string>
    <string name="non_existant">You entered a non-existent email address</string>
    <string name="reset_email_sent">Password reset email sent</string>
    <string name="re_enter_pass">Re-enter your password</string>
    <string name="must_contain">Password must contain more than 5 letters</string>
    <string name="do_not_match">Passwords do not match</string>
    <string name="acc_registered">Account registered</string>
    <string name="already_exists">An account with this email already exists.</string>
    <string name="registration_failed">Registration failed</string>
    <string name="movies">Movies</string>
    <string name="information">Information</string>
    <string name="main_page_title">Main Page</string>
    <string name="welcome_to_cinema_name">Welcome to @cinema_name!</string>
    <string name="about_our_cinema">About Our Cinema</string>
    <string name="pricing_and_tickets">Pricing and tickets</string>
    <string name="contact_us">Contact Us</string>
    <string name="info">Address: Dimokritou 58 St.\nPhone: 2410 000 000\nEmail: info@cinemabooking.com</string>
    <string name="home">Home</string>
    <string name="about_us">About us</string>
    <string name="switch_language">Switch language</string>
    <string name="admin_settings">Admin Settings</string>
    <string name="delete_your_account">Delete your account</string>
    <string name="change_password">Change password</string>
    <string name="sign_out">Sign out</string>
    <string name="hello">Hello</string>
    <string name="about_us_info">This is an app made by Rafail Papastamou.</string>
    <string name="admin_settings_title">Admin Settings</string>
    <string name="are_you_sure_you_want_to_delete_your_account">Are you sure you want to delete your account?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="delete">Delete</string>
    <string name="change_your_password">Change your password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="acc_deleted">Account deleted</string>
    <string name="failed_to_delete_acc">Failed to delete account</string>
    <string name="wrong_password">Wrong password</string>
    <string name="password_updated_successfully">Password updated successfully</string>
    <string name="both_fields_required">Both fields are required</string>
    <string name="language_changed">Language changed successfully</string>
    <string name="all_fields_required">All fields are required</string>
    <string name="wrong_old_password">Wrong old password</string>
    <string name="email_error">Please enter a valid email address</string>
    <string name="password_error">Only english letters, numbers and symbols are allowed</string>
    <string name="administrators">Administrators</string>
    <string name="configure_admin_settings">Configure users</string>
    <string name="configure_the_movies_section">Configure the movies list</string>
    <string name="movies_section">Movies List</string>
    <string name="show_the_users_with_admin_priv">See the users with administrator privileges</string>
    <string name="add_an_admin">Add an admin</string>
    <string name="grant_admin_priv">Grant a user administrator privileges</string>
    <string name="employees">Employees</string>
    <string name="employee">Employee</string>
    <string name="admin">Administrator</string>
    <string name="admins">Admins</string>
    <string name="edit_users">Edit users</string>
    <string name="add_an_employee">Add an employee</string>
    <string name="remove_an_admin">Remove an administrator</string>
    <string name="remove_an_employee">Remove an employee</string>
    <string name="delete_a_users_account">Delete a user\'s account</string>
    <string name="user_is_already_an_admin">User is already an admin</string>
    <string name="usser_set_as_admin">User set as admin</string>
    <string name="user_with_this_email_does_not_exist">User with this email does not exist</string>
    <string name="please_enter_an_email_address">Please enter an email address</string>
    <string name="you_cannot_change_your_own_admin_status">You cannot change your own admin status</string>
    <string name="user_is_not_an_admin">User is not an admin</string>
    <string name="user_is_no_longer_an_admin">User is no longer an admin</string>
    <string name="user_is_already_an_employee">User is already an employee</string>
    <string name="user_set_as_employee">User set as employee</string>
    <string name="user_is_not_an_employee">User is not an employee</string>
    <string name="user_is_no_longer_an_employee">User is no longer an employee</string>
    <string name="users">Users</string>
    <string name="you_cannot_delete_your_own_account">You cannot delete your own account</string>
    <string name="currently_in_theater">Currently in theater</string>
    <string name="add_a_movie">Add a movie</string>
    <string name="edit_a_movie">Edit a movie</string>
    <string name="remove_a_movie">Remove a movie</string>
    <string name="remove_this_movie">Remove this movie</string>
    <string name="successfully_removed_movie">Successfully removed movie</string>
    <string name="failed_to_remove_movie">Failed to remove movie</string>
    <string name="click_a_movie_to_remove_it_from_the_list">Click a movie to remove it from the list</string>
    <string name="movie_title">Movie title</string>
    <string name="movie_genre">Movie genre</string>
    <string name="movie_release_date">Movie release date</string>
    <string name="select_a_date_and_time">Select a date and time</string>
    <string name="upload_a_picture_for_the_movie_s_cover">Upload a picture for the movie\'s cover</string>
    <string name="seat_instructions">Grey: Available, Green: Selected\, Red: Booked</string>
    <string name="book_selected_seats">Book Selected Seats</string>
    <string name="seat_selection">Seat Selection</string>
    <string name="please_select_your_seats">Please select your seats</string>
    <string name="enter_information">Enter information</string>
    <string name="please_enter_a_movie_title">Please enter a movie title</string>
    <string name="please_enter_a_movie_genre">Please enter a movie genre</string>
    <string name="please_enter_a_movie_release_date">Please enter a movie release date</string>
    <string name="please_pick_a_date_and_time">Please pick a date and time from the calendar icon</string>
    <string name="please_select_an_image_to_upload">Please select an image to upload</string>
    <string name="enter_your_contact_info">Enter Your Contact Information:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_the_seat_information">Enter The Seat Information:</string>
    <string name="continue_to_payment_0">Continue to payment</string>
    <string name="make_sure_your_info_is_correct">Make sure the information is correct before paying!</string>
    <string name="movie_infomation">Movie Infomation:</string>
    <string name="your_ticket_purchase_was_successful">Your ticket purchase was successful.</string>
    <string name="an_email_ticket_has_been_sent_to_your_inbox">An email-ticket has been sent to your inbox.</string>
    <string name="press_to_back_to_the_main_menu"><u>Press here to get back to the main menu</u></string>
    <string name="are_you_sure_you_want_to_delete_this_movie">Are you sure you want to delete this movie?</string>
    <string name="delete_movie">Delete Movie</string>
</resources>