<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:checkableBehavior="single"
        android:title="">
        <menu>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/baseline_info_black_24dp"
            android:title="@string/about_us" />
        </menu>
    </item>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_language"
                android:icon="@drawable/baseline_language_black_24dp"
                android:title="@string/switch_language" />
            <item
                android:id="@+id/nav_admin"
                android:icon="@drawable/baseline_admin_panel_settings_black_24dp"
                android:title="@string/admin_settings" />
            <item
                android:id="@+id/nav_delete_account"
                android:icon="@drawable/baseline_delete_black_24dp"
                android:title="@string/delete_your_account" />
            <item
                android:id="@+id/nav_change_password"
                android:icon="@drawable/baseline_mode_edit_black_24dp"
                android:title="@string/change_password" />
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/baseline_logout_black_24dp"
                android:title="@string/sign_out" />
        </menu>

    </item>

</menu>
