<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layoutMovieDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingTop="?attr/actionBarSize">

        <!-- Collect user contact information -->
        <TextView
            android:id="@+id/tvEnterContactInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_contact_info"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Collect user first name -->
        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:inputType="textPersonName" />

        <!-- Collect user last name -->
        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />

        <!-- Collect user email -->
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <!-- Collect user phone number -->
        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone" />

        <TextView
            android:id="@+id/tvEnterSeatInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/enter_the_seat_information"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>

    <!-- RecyclerView for selecting seats -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/SeatsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/layoutMovieDetails"
        android:layout_above="@id/layoutButton"
        android:isScrollContainer="true"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <!-- Submit button layout -->
    <LinearLayout
        android:id="@+id/layoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="16dp">

        <!-- Submit button -->
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/continue_to_payment_0" />
    </LinearLayout>
</RelativeLayout>