<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/basic"
    android:padding="15dp">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="148dp"
        android:layout_height="174dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/tick_icon"/>

    <TextView
        android:id="@+id/success_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView3"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/your_ticket_purchase_was_successful"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/ticket_details"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/success_message"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:text="@string/an_email_ticket_has_been_sent_to_your_inbox"
        android:textSize="16sp"
        android:paddingTop="20dp"/>

    <TextView
        android:id="@+id/tvGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ticket_details"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:text="@string/press_to_back_to_the_main_menu"
        android:layout_marginTop="40dp"
        android:paddingTop="20dp"/>

</RelativeLayout>
